package com.megainf3d.informmodelsystcreator.Iterator;

/**
 * Aggregator
 */
public interface Aggregate {
    /**
     * @return slide-iterator
     */
    Iterator getIterator();
}
